--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "sass src/scss:dist/css",
     "start": "sass --watch src/scss:dist/css & live-server",
     "lint": "eslint src/**/*.js",
+    "format": "prettier -w src/**/*.html",
     "prepare": "husky install"
   },
   "keywords": [],
@@ -17,12 +18,19 @@
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "live-server": "^1.2.2",
+    "prettier": "^3.3.3",
     "sass": "^1.54.8"
   },
   "dependencies": {
     "bootstrap-dark-5": "^1.1.3"
   },
   "lint-staged": {
-    "*.js": "lint"
+    "*.js": [
+      "eslint",
+      "prettier --write"
+    ],
+    "*.html": [
+      "prettier --write"
+    ]
   }
 }
