--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "start": "sass --watch src/scss:dist/css & live-server",
     "lint": "eslint src/**/*.js",
     "format": "prettier -w src/**/*.html",
+    "test": "jest",
     "prepare": "husky install"
   },
   "keywords": [],
   "author": "Noroff",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.4",
     "eslint": "^8.57.1",
     "husky": "^9.1.6",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
     "live-server": "^1.2.2",
     "prettier": "^3.3.3",
@@ -31,6 +35,12 @@
     ],
     "*.html": [
       "prettier --write"
+    ],
+    "*.css": [
+      "prettier --write"
+    ],
+    "*.test.js": [
+      "test"
     ]
   }
 }
