--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.4",
+    "cypress": "^13.15.0",
     "eslint": "^8.57.1",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
