feat: added rules to eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,6 @@
       // Stylistic Issues
       "indent": ["error", 2],
       "quotes": ["error", "single"],
-      "semi": ["error", "always"],
+      "semi": ["error", "always"]
     }
   }
