--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "sass --watch src/scss:dist/css & live-server",
     "lint": "eslint src/**/*.js",
     "lint-fix": "eslint src/**/*.js --fix",
-    "format": "prettier -w src/**/*.html",
+    "format": "prettier -w *.html",
     "test": "jest",
     "prepare": "husky install"
   },
@@ -16,8 +16,8 @@
   "author": "Noroff",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/preset-env": "^7.19.4",
+    "@babel/core": "^7.25.8",
+    "@babel/preset-env": "^7.25.8",
     "cypress": "^13.15.0",
     "eslint": "^8.57.1",
     "husky": "^9.1.6",
@@ -32,14 +32,17 @@
   },
   "lint-staged": {
     "*.js": [
-      "eslint --error",
+      "eslint",
       "prettier --write"
     ],
     "*.html": [
       "prettier --write"
     ],
-    "*.css": [
+    "*.scss": [
       "prettier --write"
+    ],
+    "*.test.js": [
+      "jest"
     ]
   }
 }
