--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint-fix": "eslint src/**/*.js --fix",
     "format": "prettier -w *.html",
     "test": "jest",
+    "e2e": "cypress",
     "prepare": "husky install"
   },
   "keywords": [],
@@ -20,6 +21,7 @@
     "@babel/preset-env": "^7.25.8",
     "cypress": "^13.15.0",
     "eslint": "^8.57.1",
+    "eslint-plugin-cypress": "^4.0.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
